--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <!-- CONTACT SECTION -->
     <h2 class="heading">CHECK <span>Meewout</span></h2>
 
-    <div class="social-media" id="Social-media">
+    <div class="social-media" id="Social-media" style="text-align:center">
       <a href="mailto:moffatkaniaru@gmail.com" target="_blank"
         ><i class="fa-brands fa-envelope"></i
       ></a>
@@ -152,7 +152,7 @@
         ><i class="fa-brands fa-github"></i
       ></a>
     </div>
-    <a href="Moffat resume iii.pdf" download class="btn">Download CV</a>
+     <div style="text-align:center"><a href="Moffat resume iii.pdf" download class="btn">Download CV</a> </div>
 
     <!-- FOOTER DESIGN -->
     <footer class="footer">
