--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
       <div class="about-content">
         <h2 class="heading">ABOUT <span>Me</span></h2>
-        <h3>Automotive Parts Manager</h3>
+        <h3>Animal Nutritionist</h3>
         <p>
           Am a Passionate and knowledgeable Animal Nutritionist with over 5
           years of experience in providing tailored nutritional advice to animal
